--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
+    "lint-staged": {
+    "**/*.(ts|tsx|js)": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
@@ -20,6 +26,8 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
     "prettier": "2.6.1",
     "typescript": "4.6.3"
   }
