--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
     "lint-staged": {
-    "**/*.(ts|tsx|js)": [
+    "**/*.(ts|tsx|js|json)": [
       "prettier --write",
       "git add"
     ]
