--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
-    "eslint": "8.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.7",
     "prettier": "2.6.1",
-    "typescript": "4.6.3"
+    "typescript": "^4.6.3"
   }
 }
