--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@types/react": "17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "cypress": "^9.5.3",
     "eslint": "^8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
     "lint-staged": "^12.3.7",
+    "playwright": "^1.20.2",
     "prettier": "2.6.1",
     "typescript": "^4.6.3"
   }
