--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "prepare": "husky install",
     "cypress": "cypress open",
     "cypress:headless": "cypress run",
-    "e2e": "start-server-and-test dev http://localhost:3000 cypress",
-    "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
+    "playwright": "npx playwright test"
   },
   "lint-staged": {
     "**/*.(ts|tsx|js|json|svg|css)": [
@@ -26,6 +25,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.20.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
